# outlook-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  auth.rs  config.rs  main.rs
