[package]
name = "outlook"
version = "0.1.0"
edition = "2024"

[lib]
name = "outlook"
path = "src/lib.rs"

[[bin]]
name = "outlook"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
open = "5"
url = "2"
urlencoding = "2"
rpassword = "7"
